--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<div id="quiz"></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Code Quiz</title>
+</head>
+<body>
+    <div id="quiz"></div>
 <button id="submit">Get Results</button>
 <div id="results"></div>
+<script src="script.js"></script>
+</body>
+</html>
