--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
     <title>Code Quiz</title>
 </head>
 <body>
+	<div class="panel">
+		<div class="result">
+
+		</div>
+		<div class="question-container" id="question">
+			Which design tool do we use in this bootcamp?
+		</div>
+		<div class="option-container">
+			<button class="option" onclick="" id="op1" >Figma</button>
+	
+			<button class="option" id="op2" >Sketch</button>
+	
+			<button class="option" id="op3">CSS</button>
+	
+			<button class="option" id="op4">Adobe Illustrator</button>
+		</div>
+		<div class="navigation">
+			<button class="evaluate">Evaluate</button>
+			<button class="next">Next</button>
+		</div>
+	</div>
+	<script src="script.js"></script>
     <div id="quiz"></div>
 <button id="submit">Get Results</button>
 <div id="results"></div>
-<script src="script.js"></script>
 </body>
 </html>
